# pixi-build-example

./: .gitignore  README.adoc  pixi.toml  pyproject.toml  python_rich-0.1.0-pyhbf21a9e_0.conda
pkgs/cpp_math/: pixi.toml
pkgs/cpp_math/src/: math.cpp
pkgs/python_rich/: pixi.toml  pyproject.toml
pkgs/python_rich/src/python_rich/: __init__.py
pkgs/python_rich_mgr/: pyproject.toml
pkgs/python_rich_mgr/src/python_rich_mgr/: __init__.py
src/python_rich/: __init__.py
src/python_rich_mgr/: __init__.py
